--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <javafx.version>13.0.1</javafx.version>
+        <javafx.version>14-ea+4</javafx.version>
         <attach.version>4.0.2</attach.version>
         <graalvm.version>19.3.0</graalvm.version>
         <compiler.dir>${project.build.directory}/compiler</compiler.dir>
@@ -21,6 +21,11 @@
     </properties>
 
     <dependencies>
+	<dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -41,18 +46,6 @@
             <groupId>org.graalvm.js</groupId>
             <artifactId>js-scriptengine</artifactId>
             <version>${graalvm.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm.tools</groupId>
-            <artifactId>profiler</artifactId>
-            <version>${graalvm.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm.tools</groupId>
-            <artifactId>chromeinspector</artifactId>
-            <version>${graalvm.version}</version>
-            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
@@ -131,16 +124,22 @@
             <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>client-maven-plugin</artifactId>
-                <version>0.1.3</version>
+                <version>0.1.9-SNAPSHOT</version>
                 <configuration>
-                    <!-- Uncomment to run on iOS: -->
-                    <!-- <target>ios</target>-->
+                    <!-- Uncomment to run on android: -->
+                    <!-- <target>android</target>  -->
                     <attachList>
                         <list>display</list>
                         <list>lifecycle</list>
                         <list>statusbar</list>
                         <list>storage</list>
                     </attachList>
+                    <nativeImageArgs>
+                        <list>--language:js</list>
+                        <list>-Dtruffle.TruffleRuntime=com.oracle.truffle.api.impl.DefaultTruffleRuntime</list>
+                        <list>-Dgraalvm.ForcePolyglotInvalid=false</list>
+                        <list>--verbose</list>
+                    </nativeImageArgs>
                     <mainClass>${mainClassName}</mainClass>
                 </configuration>
             </plugin>
@@ -153,6 +152,10 @@
         <pluginRepository>
             <id>gluon-releases</id>
             <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
+        </pluginRepository>
+	<pluginRepository>
+            <id>gluon-public-snapshots</id>
+            <url>https://nexus.gluonhq.com/nexus/content/repositories/public-snapshots/</url>
         </pluginRepository>
     </pluginRepositories>
 </project>
