Removed unused dependencies, updated packages, preparing for android build

--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,17 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <javafx.version>14-ea+4</javafx.version>
-        <attach.version>4.0.2</attach.version>
         <graalvm.version>19.3.0</graalvm.version>
-        <compiler.dir>${project.build.directory}/compiler</compiler.dir>
         <mainClassName>Hello.Main</mainClassName>
     </properties>
 
     <dependencies>
-	<dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
@@ -29,6 +32,11 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
@@ -58,55 +66,10 @@
 
     <build>
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.10</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>process-test-classes</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.graalvm.compiler</groupId>
-                                    <artifactId>compiler</artifactId>
-                                    <version>${graalvm.version}</version>
-                                    <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <destFileName>compiler.jar</destFileName>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.graalvm.truffle</groupId>
-                                    <artifactId>truffle-api</artifactId>
-                                    <version>${graalvm.version}</version>
-                                    <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <destFileName>truffle-api.jar</destFileName>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.graalvm.sdk</groupId>
-                                    <artifactId>graal-sdk</artifactId>
-                                    <version>${graalvm.version}</version>
-                                    <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <destFileName>graal-sdk.jar</destFileName>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>${compiler.dir}</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
@@ -127,13 +90,7 @@
                 <version>0.1.9-SNAPSHOT</version>
                 <configuration>
                     <!-- Uncomment to run on android: -->
-                    <!-- <target>android</target>  -->
-                    <attachList>
-                        <list>display</list>
-                        <list>lifecycle</list>
-                        <list>statusbar</list>
-                        <list>storage</list>
-                    </attachList>
+                    <!-- <target>android</target> -->
                     <nativeImageArgs>
                         <list>--language:js</list>
                         <list>-Dtruffle.TruffleRuntime=com.oracle.truffle.api.impl.DefaultTruffleRuntime</list>
@@ -143,9 +100,7 @@
                     <mainClass>${mainClassName}</mainClass>
                 </configuration>
             </plugin>
-
         </plugins>
-
     </build>
 
     <pluginRepositories>
@@ -153,7 +108,7 @@
             <id>gluon-releases</id>
             <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
         </pluginRepository>
-	<pluginRepository>
+        <pluginRepository>
             <id>gluon-public-snapshots</id>
             <url>https://nexus.gluonhq.com/nexus/content/repositories/public-snapshots/</url>
         </pluginRepository>
