--- a/pom.xml
+++ b/pom.xml
@@ -26,25 +26,16 @@
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.graalvm.sdk</groupId>
             <artifactId>graal-sdk</artifactId>
             <version>${graalvm.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.js</groupId>
-            <artifactId>js</artifactId>
-            <version>${graalvm.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm.js</groupId>
-            <artifactId>js-scriptengine</artifactId>
-            <version>${graalvm.version}</version>
+            <groupId>org.graalvm.truffle</groupId>
+            <artifactId>truffle-api</artifactId>
+            <version>SYSTEM</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/lib/truffle/truffle-api.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -65,6 +56,9 @@
                 <version>0.0.3</version>
                 <configuration>
                     <mainClass>${mainClassName}</mainClass>
+                        <options>
+                            <option>-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image</option>
+                        </options>
                 </configuration>
             </plugin>
 
